@@ -1,8 +1,9 @@
-// Copyright 2006, 2007, 2008, 2009, 2012, 2016, 2017 Global Virtual Airlines Group. All Rights Reserved.
+// Copyright 2006, 2007, 2008, 2009, 2012, 2016, 2017, 2020 Global Virtual Airlines Group. All Rights Reserved.
 package org.deltava.service.schedule;
 
 import java.util.*;
 import java.io.IOException;
+import java.sql.Connection;
 
 import static javax.servlet.http.HttpServletResponse.*;
 
@@ -20,13 +21,13 @@ import org.deltava.util.system.SystemData;
 /**
  * A Web Service to display scheduled routes out of a particular Airport. 
  * @author Luke
- * @version 7.3
+ * @version 9.0
  * @since 1.0
  */
 
 public class RouteService extends WebService {
 	
-	private static final Map<String, String> LCOLORS = CollectionUtils.createMap(Arrays.asList(MapEntry.COLORS), Arrays.asList(MapEntry.LINECOLORS));
+	private static final Map<String, String> LCOLORS = CollectionUtils.createMap(List.of(MapEntry.COLORS), List.of(MapEntry.LINECOLORS));
 	
 	/**
 	 * Executes the Web Service.
@@ -44,7 +45,10 @@ public class RouteService extends WebService {
 		
 		Collection<ScheduleEntry> flights = null;
 		try {
-			GetSchedule dao = new GetSchedule(ctx.getConnection());
+			Connection con = ctx.getConnection();
+			GetRawSchedule rsdao = new GetRawSchedule(con);
+			GetSchedule dao = new GetSchedule(con);
+			dao.setSources(rsdao.getSources(true));
 			flights = dao.getFlights(a, SystemData.getAirline(ctx.getParameter("airline")));
 		} catch (DAOException de) {
 			throw error(SC_INTERNAL_SERVER_ERROR, de.getMessage());
